<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.HomeActivity"
    tools:showIn="@layout/activity_home"
    android:background="#BDBDBD">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/order"
                android:background="#FAFAFA"
                android:paddingTop="10dp"
                android:text="@string/order"
                android:textSize="@dimen/home_menu_text_size"
                android:onClick="clickOrder" />
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/kitchen"
                android:background="#EF5350"
                android:paddingTop="10dp"
                android:text="@string/kitchen"
                android:textSize="@dimen/home_menu_text_size"
                android:onClick="clickKitchen"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ticket2"
                android:background="#26C6DA"
                android:paddingTop="10dp"
                android:text="@string/ticket"
                android:textSize="@dimen/home_menu_text_size"
                android:onClick="clickTicket"
                />
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/customer2"
                android:background="#FFA726"
                android:paddingTop="10dp"
                android:text="@string/customer"
                android:textSize="@dimen/home_menu_text_size"
                android:onClick="clickCustomer"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/report"
                android:background="#EC407A"
                android:paddingTop="10dp"
                android:text="@string/report"
                android:textSize="@dimen/home_menu_text_size"
                android:onClick="clickReport"
                />
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/back_office"
                android:background="#26A69A"
                android:paddingTop="10dp"
                android:text="@string/back_office"
                android:textSize="@dimen/home_menu_text_size"
                android:onClick="clickBackOffice"
                />
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
