<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tinyappsdev.tinypos.OrderFragments.OrderMenuFragment">

    <GridView
        android:id="@+id/order_menu_gridview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="160dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:horizontalSpacing="8dp"
        android:verticalSpacing="8dp"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay"
        android:padding="8dp"
        android:layout_marginTop="70dp"
        />

    <LinearLayout android:layout_height="70dp" android:layout_width="match_parent"
        android:orientation="horizontal" android:layout_gravity="top"
        android:background="?attr/colorPrimary"
        android:elevation="4dp">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/up"
            android:text="@string/up"
            android:textColor="#fff"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/menu"
            android:text="@string/top"
            android:textColor="#fff"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/search2"
            android:text="@string/search"
            android:textColor="#fff"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ticket"
            android:text="@string/order_ticket"
            android:textColor="#fff"
            style="@style/Widget.AppCompat.Button.Borderless" />


    </LinearLayout>



</FrameLayout>
