<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:focusable="true"
    android:contextClickable="true"
    android:focusableInTouchMode="true"
    android:touchscreenBlocksFocus="true">

    <TextView
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textColor="?attr/colorAccent"
        android:textAllCaps="true" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/serverAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_address" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/serverPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="16dp"
        android:text="Login"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_server"
        />

    <TextView
        android:layout_marginTop="16dp"
        android:text="@string/login_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
