<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OrderFragments.OrderTicketFragment">

    <LinearLayout android:layout_height="70dp" android:layout_width="match_parent"
        android:orientation="horizontal" android:layout_gravity="top"
        android:background="?attr/colorPrimary">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/dinein"
            android:text="@string/dine_in"
            android:textColor="#fff"
            style="@style/Widget.AppCompat.Button.Borderless"
            />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/customer"
            android:text="6x"
            android:textColor="#fff"
            style="@style/Widget.AppCompat.Button.Borderless"
            />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/customer_info"
            android:text="Guest"
            android:textColor="#fff"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/food2"
            android:text="0/12"
            android:textColor="#fff"
            style="@style/Widget.AppCompat.Button.Borderless" />


    </LinearLayout>


    <ListView
        android:id="@+id/order_ticket_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay"
        android:padding="8dp"
        android:dividerHeight="8dp"
        android:divider="#00000000"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp"
        />


    <LinearLayout android:layout_height="70dp" android:layout_width="match_parent"
        android:orientation="horizontal" android:layout_gravity="bottom"
        android:background="?attr/colorPrimary">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/check"
            android:text="@string/confirm_order"
            android:id="@+id/order_confirm"
            android:textColor="#fff"
            style="@style/Widget.AppCompat.Button.Borderless"
            />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/pay"
            android:text="@string/pay_order"
            android:id="@+id/order_pay"
            android:textColor="#fff"
            style="@style/Widget.AppCompat.Button.Borderless"
            />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/more"
            android:text="@string/more_options"
            android:id="@+id/more_options"
            android:textColor="#fff"
            style="@style/Widget.AppCompat.Button.Borderless"
            />

    </LinearLayout>

</FrameLayout>
