<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OrderFragment.OrderTicketFragment">

    <ListView
        android:id="@+id/order_ticket_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:dividerHeight="1dp"
        android:divider="#eeeeee"
        android:layout_marginBottom="70dp"
        android:background="#fff"
        />

    <LinearLayout
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:background="?attr/colorPrimary">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/options"
            android:text="@string/more_options"
            android:id="@+id/more_options"
            android:textColor="#fff"
            style="@style/Widget.AppCompat.Button.Borderless"
            />

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/payment"
            android:text="@string/payment"
            android:id="@+id/order_pay"
            android:textColor="#fff"
            style="@style/Widget.AppCompat.Button.Borderless"
            />

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textAlignment="viewEnd"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmallInverse"
                    android:text="@string/total"
                    android:textStyle="bold" />
                <TextView
                    android:textAlignment="viewEnd"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmallInverse"
                    android:text="$102.00"
                    android:id="@+id/orderTotal"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textAlignment="viewEnd"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmallInverse"
                    android:text="@string/due"
                    android:textStyle="bold" />
                <TextView
                    android:textAlignment="viewEnd"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmallInverse"
                    android:text="$102.00"
                    android:id="@+id/orderDue"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
