<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.OrderFragment.FoodDetailFragment"
    android:clickable="true"
    android:focusable="true"
    android:contextClickable="true"
    android:focusableInTouchMode="true"
    android:touchscreenBlocksFocus="true">

    <LinearLayout
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="?attr/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageButton
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:src="@drawable/go_back"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/back"
            android:contentDescription="@string/go_back"
            />

        <TextView
            android:textAlignment="viewStart"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Hot Dog"
            android:ellipsize="end"
            android:maxLines="1"
            android:id="@+id/food_title_txt" />

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:src="@drawable/check2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/confirm"
            android:contentDescription="@string/confirm"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:paddingBottom="70dp"
        android:clipToPadding="false"
        android:background="#fff"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/food_details_layout">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/quantity"
                    android:textStyle="bold"
                    />
                <NumberPicker
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:id="@+id/quantityPicker"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/moreOptionsFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/remove" />

</FrameLayout>
